erDiagram
    begriff {
        INTEGER id PK
        VARCHAR(32) art
        VARCHAR(64) slug
        VARCHAR(120) name
        INTEGER reihenfolge
    }
    foto {
        VARCHAR(36) id PK
        VARCHAR(36) fund_id FK
        VARCHAR(64) dateiname
        INTEGER breite
        INTEGER hoehe
        DATETIME erstellt_am
    }
    fund {
        VARCHAR(36) id PK
        VARCHAR(255) besitzer_name "optional"
        VARCHAR(64) art_slug
        FLOAT lat
        FLOAT lon
        DATE datum
        INTEGER anzahl "optional"
        BOOLEAN fuer_training
        VARCHAR(16) sichtbarkeit
        TEXT notiz "optional"
        DATETIME erstellt_am
        DATETIME geaendert_am
        VARCHAR(255) besitzer_sub FK
    }
    kombination {
        VARCHAR(36) id PK
        VARCHAR(80) name
        VARCHAR(16) regel
        TEXT faktoren
        DATETIME erstellt_am
        DATETIME geaendert_am
        VARCHAR(255) besitzer_sub FK
    }
    marker {
        VARCHAR(36) id PK
        VARCHAR(80) name
        FLOAT lat
        FLOAT lon
        VARCHAR(16) farbe
        VARCHAR(16) sichtbarkeit
        TEXT notiz "optional"
        DATETIME erstellt_am
        DATETIME geaendert_am
        VARCHAR(255) besitzer_sub FK
    }
    nutzer {
        VARCHAR(255) sub PK
        VARCHAR(255) email "optional"
        VARCHAR(255) name "optional"
        DATETIME erstellt_am
    }
    permission {
        VARCHAR(40) key PK
        VARCHAR(20) area
    }
    role {
        VARCHAR(36) id PK
        VARCHAR(64) slug UK
        VARCHAR(80) name
        TEXT description "optional"
        BOOLEAN built_in
        DATETIME created_at
        DATETIME updated_at
    }
    role_permission {
        VARCHAR(36) role_id PK, FK
        VARCHAR(40) permission_key PK, FK
    }
    species_image {
        VARCHAR(36) id PK
        VARCHAR(80) species_slug
        VARCHAR(255) uploader_sub FK
        VARCHAR(120) photographer
        VARCHAR(16) licence
        TEXT source "optional"
        DATE taken_on "optional"
        VARCHAR(200) caption "optional"
        FLOAT lat "optional"
        FLOAT lon "optional"
        BOOLEAN lead
        VARCHAR(16) state
        VARCHAR(200) reject_reason "optional"
        VARCHAR(255) reviewed_by FK "optional"
        DATETIME reviewed_at "optional"
        INTEGER width
        INTEGER height
        DATETIME created_at
        DATETIME updated_at
    }
    taxon {
        VARCHAR(36) id PK
        VARCHAR(16) rank
        VARCHAR(80) slug UK
        VARCHAR(120) name
        VARCHAR(120) latin_name "optional"
        VARCHAR(36) parent_id FK "optional"
        TEXT description "optional"
    }
    text {
        VARCHAR(120) key PK
        VARCHAR(5) locale PK
        TEXT value
        DATETIME updated_at
        VARCHAR(255) updated_by FK "optional"
    }
    user_role {
        VARCHAR(255) user_sub PK, FK
        VARCHAR(36) role_id PK, FK
        DATETIME granted_at
    }
    zone {
        VARCHAR(36) id PK
        VARCHAR(80) name
        TEXT polygon
        FLOAT flaeche_ha
        VARCHAR(16) farbe
        VARCHAR(16) sichtbarkeit
        TEXT notiz "optional"
        DATETIME erstellt_am
        DATETIME geaendert_am
        VARCHAR(255) besitzer_sub FK
    }
    fund ||--o{ foto : "fund_id"
    nutzer |o--o{ species_image : "reviewed_by"
    nutzer |o--o{ text : "updated_by"
    nutzer ||--o{ fund : "besitzer_sub"
    nutzer ||--o{ kombination : "besitzer_sub"
    nutzer ||--o{ marker : "besitzer_sub"
    nutzer ||--o{ species_image : "uploader_sub"
    nutzer ||--o{ user_role : "user_sub"
    nutzer ||--o{ zone : "besitzer_sub"
    permission ||--o{ role_permission : "permission_key"
    role ||--o{ role_permission : "role_id"
    role ||--o{ user_role : "role_id"
    taxon |o--o{ taxon : "parent_id"
